feat(listing): add GetBySKU endpoint
see: DEV-321
